ATLAS-875: Changes according to PR comments.